refactor: change footer social media png icons to svg

--- a/plants/index.html
+++ b/plants/index.html
@@ -325,20 +325,28 @@
                         <a class="footer__container-link" href="https://rs.school/js/" target="_blank">Rolling Scopes School</a>
                     </div>
                     <div class="footer__container-column3">
-                        <div class="footer__social__media__container">
-                            <a class="social-media-container-item" href="https://www.instagram.com/" target="_blank">
-                                <img class="social-media-container-image" src="assets/png/inst.png" alt="Instagramm">
-                            </a>
-                            <a class="social-media-container-item" href="http://facebook.com/" target="_blank">
-                                <img class="social-media-container-image" src="assets/png/fb.png" alt="Facebook">
-                            </a>
-                            <a class="social-media-container-item" href="https://twitter.com" target="_blank">
-                                <img class="social-media-container-image" src="assets/png/tw.png" alt="Twitter">
-                            </a>
-                            <a class="social-media-container-item" href="https://www.pinterest.com/" target="_blank">
-                                <img class="social-media-container-image" src="assets/png/pinterest.png" alt="Pinterest">
-                            </a>
-                        </div>
+                        <ul class="footer__social__media__container">
+                            <li>
+                                <a class="social-media-container-item" href="https://www.instagram.com/" target="_blank">
+                                    <img class="social-media-container-image" src="assets/svg/inst.svg" alt="Instagramm">
+                                </a>
+                            </li>
+                            <li>
+                                <a class="social-media-container-item" href="http://facebook.com/" target="_blank">
+                                    <img class="social-media-container-image" src="assets/svg/fb.svg" alt="Facebook">
+                                </a>
+                            </li>
+                            <li>
+                                <a class="social-media-container-item" href="https://twitter.com" target="_blank">
+                                    <img class="social-media-container-image" src="assets/svg/tw.svg" alt="Twitter">
+                                </a>
+                            </li>
+                            <li>
+                                <a class="social-media-container-item" href="https://www.pinterest.com/" target="_blank">
+                                    <img class="social-media-container-image" src="assets/svg/pinterest.svg" alt="Pinterest">
+                                </a>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
