--- a/plants/index.html
+++ b/plants/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Plants</title>
+    <title>Plants 2</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inika">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
     <link rel="icon" href="assets/ico/logo_plants.ico">
@@ -40,12 +40,23 @@
                                 <a href="#contacts" class="header__nav-list-item-link">Contacts</a>
                             </li>
                        </ul>
+                       <div class="header__nav__close">
+                            <span class="header__nav__close-line"></span>
+                            <span class="header__nav__close-line"></span>
+                       </div>
                     </nav>
+
+                    <div class="header__burger burger">
+                        <span class="burger__line burger__line__first"></span>
+                        <span class="burger__line burger__line__second"></span>
+                        <span class="burger__line burger__line__third"></span>
+                        <span class="burger__line burger__line__fourth"></span>
+                    </div>
                 </div>
             </div>
         </div>
     </header>
-    <main>
+    <main style="display:none">
         <div class="wrapper-full">
             <section class="welcome" id="welcome">
                 <div class="container">
