feat: add welcome section responsive layout

--- a/plants/index.html
+++ b/plants/index.html
@@ -56,13 +56,13 @@
             </div>
         </div>
     </header>
-    <main style="display:none">
+    <main>
         <div class="wrapper-full">
             <section class="welcome" id="welcome">
                 <div class="container">
                     <div class="welcome__content">
                         <div class="welcome__content_wrapper">
-                            <img src="assets/png/welcome.png" alt="We grow plants and give you oxygen" class="welcome__content-image">
+                            <img class="welcome__content-image" src="assets/png/welcome.png" alt="We grow plants and give you oxygen">
                         </div>
 
                         <div class="welcome__content_wrapper">
@@ -78,7 +78,7 @@
                 </div>
             </section>
 
-            <section class="about" id="about">
+            <section class="about" id="about" style="display:none">
                 <div class="container">
                     <div class="about__content">
                         <div class="about__content-wrapper">
@@ -97,7 +97,7 @@
 
             
             <!--service start-->
-            <section class="service" id="service">
+            <section class="service" id="service"  style="display:none">
                 <div class="container">
                     <div class="service__content">
                         <h2 class="service__content-title">Service and our projects</h2>
@@ -156,7 +156,7 @@
             <!--service end-->
 
             <!--prices start-->
-            <section class="price" id="prices">
+            <section class="price" id="prices"  style="display:none">
                 <div class="container">
                     <div class="price__container">
                         <div class="price__info">
@@ -222,7 +222,7 @@
             <!--prices end -->
 
             <!--contacts start-->
-            <section class="contacts" id="contacts">
+            <section class="contacts" id="contacts"  style="display:none">
                 <div class="container">
                     <div class="contacts__container">
                         <div class="contacts__container-column1">
@@ -320,7 +320,7 @@
             <!--contacts end-->
         </div>
     </main>
-    <footer>
+    <footer  style="display:none">
         <div class="wrapper-full footer">
             <div class="container">
                 <div class="footer__container">
