--- a/plants/index.html
+++ b/plants/index.html
@@ -78,7 +78,7 @@
                 </div>
             </section>
 
-            <section class="about" id="about" style="display:none">
+            <section class="about" id="about">
                 <div class="container">
                     <div class="about__content">
                         <div class="about__content-wrapper">
