feat: add service section responsive layout

--- a/plants/index.html
+++ b/plants/index.html
@@ -97,7 +97,7 @@
 
             
             <!--service start-->
-            <section class="service" id="service"  style="display:none">
+            <section class="service" id="service">
                 <div class="container">
                     <div class="service__content">
                         <h2 class="service__content-title">Service and our projects</h2>
