feat: add price section responsive layout

--- a/plants/index.html
+++ b/plants/index.html
@@ -156,7 +156,7 @@
             <!--service end-->
 
             <!--prices start-->
-            <section class="price" id="prices"  style="display:none">
+            <section class="price" id="prices">
                 <div class="container">
                     <div class="price__container">
                         <div class="price__info">
