feat: add contacts section responsive layout

--- a/plants/index.html
+++ b/plants/index.html
@@ -222,7 +222,7 @@
             <!--prices end -->
 
             <!--contacts start-->
-            <section class="contacts" id="contacts"  style="display:none">
+            <section class="contacts" id="contacts">
                 <div class="container">
                     <div class="contacts__container">
                         <div class="contacts__container-column1">
