--- a/plants/index.html
+++ b/plants/index.html
@@ -320,7 +320,7 @@
             <!--contacts end-->
         </div>
     </main>
-    <footer  style="display:none">
+    <footer>
         <div class="wrapper-full footer">
             <div class="container">
                 <div class="footer__container">
