--- a/plants/index.html
+++ b/plants/index.html
@@ -17,9 +17,7 @@
             <div class="container">
                 <div class="header__container">
                     <div class="header__logo">
-                        <a href="#" class="header__logo-link">
-                            <img src="assets/svg/logo_plants.svg" alt="Leafs logo" class="header__logo-image">Plants
-                        </a>
+                        <a href="#" class="header__logo-link"><img src="assets/svg/logo_plants.svg" alt="Leafs logo" class="header__logo-image">Plants</a>
                     </div>
         
                     <nav class="header__nav">
