fix: replace service images with correct

--- a/plants/index.html
+++ b/plants/index.html
@@ -107,42 +107,42 @@
                     </div>
                     <div class="service__cards">
                         <div class="service__card garden_care">
-                            <img src="assets/png/service_1_1.png" alt="Garden care" class="service__card-image">
+                            <img src="assets/jpg/service_1_1.jpg" alt="Garden care" class="service__card-image">
                             <div class="service__card-info">
                                 <h3 class="service__card-title">Garder care</h3>
                                 <p class="service__card-desription">Lorem Ipsum has been the industry</p>
                             </div>
                         </div>
                         <div class="service__card planting">
-                            <img src="assets/png/service_1_2.png" alt="Planting" class="service__card-image">
+                            <img src="assets/jpg/service_1_2.jpg" alt="Planting" class="service__card-image">
                             <div class="service__card-info">
                                 <h3 class="service__card-title">Planting</h3>
                                 <p class="service__card-desription">Lorem Ipsum has been the industry</p>
                             </div>
                         </div>
                         <div class="service__card lawn_care">
-                            <img src="assets/png/service_1_3.png" alt="Lawn care" class="service__card-image">
+                            <img src="assets/jpg/service_1_3.jpg" alt="Lawn care" class="service__card-image">
                             <div class="service__card-info">
                                 <h3 class="service__card-title">Lawn care</h3>
                                 <p class="service__card-desription">Lorem Ipsum has been the industry</p>
                             </div>
                         </div>
                         <div class="service__card planting">
-                            <img src="assets/png/service_2_1.png" alt="Planting" class="service__card-image">
+                            <img src="assets/jpg/service_2_1.jpg" alt="Planting" class="service__card-image">
                             <div class="service__card-info">
                                 <h3 class="service__card-title">Planting</h3>
                                 <p class="service__card-desription">Lorem Ipsum has been the industry</p>
                             </div>
                         </div>
                         <div class="service__card garden_care">
-                            <img src="assets/png/service_2_2.png" alt="Garden care" class="service__card-image">
+                            <img src="assets/jpg/service_2_2.jpg" alt="Garden care" class="service__card-image">
                             <div class="service__card-info">
                                 <h3 class="service__card-title">Garden care</h3>
                                 <p class="service__card-desription">Lorem Ipsum has been the industry</p>
                             </div>
                         </div>
                         <div class="service__card planting">
-                            <img src="assets/png/service_2_3.png" alt="Planting" class="service__card-image">
+                            <img src="assets/jpg/service_2_3.jpg" alt="Planting" class="service__card-image">
                             <div class="service__card-info">
                                 <h3 class="service__card-title">Planting</h3>
                                 <p class="service__card-desription">Lorem Ipsum has been the industry</p>
