feat: contacts section select accordion item logic

--- a/plants/index.html
+++ b/plants/index.html
@@ -161,6 +161,7 @@
                             <h2 class="price-header__base price-header">Prices</h2>
                             <div class="price__list__container">
                                 <ul class="price__list">
+                                
                                     <li class="price__list-item">
                                         <div class="price__list-item-header-container">
                                             <h3 class="price__list-item-header">Basics</h3>
@@ -172,10 +173,11 @@
                                                 <hr class="price__info__separator">
                                                 <p class="price__description">Release of Letraset sheets containing Lorem Ipsum passages, and more recently</p>
                                                 <p class="price__text__info"><span class="price__text">$<span class="price__text__digits">15</span></span>&nbsp;&nbsp;/&nbsp;per hour</p>
-                                                <a href="#!" class="order__button">Order</a>                                              
+                                                <a href="#contacts" class="order__button">Order</a>                                              
                                             </div>
                                         </div>
                                     </li>
+
                                     <li class="price__list-item">
                                         <div class="price__list-item-header-container">
                                             <h3 class="price__list-item-header">Standard</h3>
@@ -187,10 +189,11 @@
                                                 <hr class="price__info__separator">
                                                 <p class="price__description">Release of Letraset sheets containing Lorem Ipsum passages, and more recently</p>
                                                 <p class="price__text__info"><span class="price__text">$<span class="price__text__digits">25</span></span>&nbsp;&nbsp;/&nbsp;per hour</p>
-                                                <a href="#!" class="order__button">Order</a>                                              
+                                                <a href="#contacts" class="order__button">Order</a>                                              
                                             </div>
                                         </div>
                                     </li>
+
                                     <li class="price__list-item">
                                         <div class="price__list-item-header-container">
                                             <h3 class="price__list-item-header">Pro care</h3>
@@ -202,7 +205,7 @@
                                                 <hr class="price__info__separator">
                                                 <p class="price__description">Release of Letraset sheets containing Lorem Ipsum passages, and more recently</p>
                                                 <p class="price__text__info"><span class="price__text">$<span class="price__text__digits">35</span></span>&nbsp;&nbsp;/&nbsp;per hour</p>
-                                                <a href="#!" class="order__button">Order</a>                                              
+                                                <a href="#contacts" class="order__button">Order</a>                                              
                                             </div>
                                         </div>
                                     </li>
@@ -211,7 +214,7 @@
                         </div>
                         <div class="contact__us">
                             <h2 class="price-header__base contact__us-header">Our best <span class="contact__us-header__green">gardeners</span> are ready to help you</h2>
-                            <a href="#!" class="contact__us-button">Contact us</a>
+                            <a href="#contacts" class="contact__us-button">Contact us</a>
                             <img src="assets/png/prices-leafs.png" alt="leafs" class="contact__us-image">
                         </div>
                     </div>
