feat: add contuct us section select logic

--- a/plants/index.html
+++ b/plants/index.html
@@ -251,14 +251,15 @@
                                         </div>
                                         <div class="card__row">
                                             <div class="card__row_column1">Phone:</div>
-                                            <div class="card__row_column2">+1&nbsp;585&nbsp;393&nbsp;0001</div>
+                                            <div class="card__row_column2 phone">+1&nbsp;585&nbsp;393&nbsp;0001</div>
                                         </div>
                                         <div class="card__row">
                                             <div class="card__row_column1">Office adress:</div>
                                             <div class="card__row_column2">151 Charlotte Street</div>
                                         </div>
 
-                                        <a href="#!" class="call__us-button">Call us</a>
+                                        <!-- Было сделано в виде ссылки, но что бы полностью следовать ТЗ переделываю на кнопку для plants3 -->
+                                        <button class="call__us-button" type="button">Call us</button>
                                     </div>
 
                                     <div class="city__card hidden two">
@@ -268,14 +269,15 @@
                                         </div>
                                         <div class="card__row">
                                             <div class="card__row_column1">Phone:</div>
-                                            <div class="card__row_column2">+1&nbsp;212&nbsp;456&nbsp;0002</div>
+                                            <div class="card__row_column2 phone">+1&nbsp;212&nbsp;456&nbsp;0002</div>
                                         </div>
                                         <div class="card__row">
                                             <div class="card__row_column1">Office adress:</div>
                                             <div class="card__row_column2">9 East 91st Street</div>
                                         </div>
 
-                                        <a href="#!" class="call__us-button">Call us</a>
+                                        <!-- Было сделано в виде ссылки, но что бы полностью следовать ТЗ переделываю на кнопку для plants3 -->
+                                        <button class="call__us-button" type="button">Call us</button>
                                     </div>
 
                                     <div class="city__card hidden three">
@@ -285,14 +287,15 @@
                                         </div>
                                         <div class="card__row">
                                             <div class="card__row_column1">Phone:</div>
-                                            <div class="card__row_column2">+1&nbsp;914&nbsp;678&nbsp;0003</div>
+                                            <div class="card__row_column2 phone">+1&nbsp;914&nbsp;678&nbsp;0003</div>
                                         </div>
                                         <div class="card__row">
                                             <div class="card__row_column1">Office adress:</div>
                                             <div class="card__row_column2">511 Warburton Ave</div>
                                         </div>
 
-                                        <a href="#!" class="call__us-button">Call us</a>
+                                        <!-- Было сделано в виде ссылки, но что бы полностью следовать ТЗ переделываю на кнопку для plants3 -->
+                                        <button class="call__us-button" type="button">Call us</button>
                                     </div>
 
                                     <div class="city__card hidden four">
@@ -302,14 +305,15 @@
                                         </div>
                                         <div class="card__row">
                                             <div class="card__row_column1">Phone:</div>
-                                            <div class="card__row_column2">+1&nbsp;315&nbsp;908&nbsp;0004</div>
+                                            <div class="card__row_column2 phone">+1&nbsp;315&nbsp;908&nbsp;0004</div>
                                         </div>
                                         <div class="card__row">
                                             <div class="card__row_column1">Office adress:</div>
                                             <div class="card__row_column2">14 WEST Noyes BLVD</div>
                                         </div>
 
-                                        <a href="#!" class="call__us-button">Call us</a>
+                                        <!-- Было сделано в виде ссылки, но что бы полностью следовать ТЗ переделываю на кнопку для plants3 -->
+                                        <button class="call__us-button" type="button">Call us</button>
                                     </div>
 
                                 </div>
